Document PPDG/src/objects/CPF_Relationship__c.object
<CustomObject>
    <fields>
        <fullName>Child_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Child Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>CPF Relationships</relationshipLabel>
        <relationshipName>CPF_Child_Account</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <label>Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>FCU_Comments__c</fullName>
        <label>FCU Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Is_Beneficialowner__c</fullName>
        <label>Is_ Beneficialowner</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Is_Director__c</fullName>
        <label>Is Director</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Is_Settlor__c</fullName>
        <label>Is_ Settlor</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Is_Shareholder__c</fullName>
        <label>Is Shareholder</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Is_Signatory__c</fullName>
        <label>Is Signatory</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Is_Trustee__c</fullName>
        <label>Is_Trustee</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Parent_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Parent Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>CPF Relationships (Parent Account)</relationshipLabel>
        <relationshipName>CPF_Relationships</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Position_Held__c</fullName>
        <label>Position Held</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Relationship_Type__c</fullName>
        <label>Relationship Type</label>
        <picklist>
            <picklistValues>
                <fullName>Director</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Shareholder</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Director &amp; Shareholder</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Shareholder_Percentage__c</fullName>
        <label>Shareholder Percentage</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <label>CPF Relationship</label>
    <nameField>
        <label>CPF Relationship Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>CPF Relationships</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>